--- a/calculator.css
+++ b/calculator.css
@@ -5,15 +5,125 @@ body {
   height: 100vh;
 }
 
+.calculator-container {
+  position: relative;
+  max-width: 500px; 
+  margin: auto;
+  padding-top: 40px; /* Make space for the theme selector */
+}
+
+.theme-selector-container {
+  position: absolute; /* Absolute positioning */
+  right: 0; /* Stick to the right */
+  top: 0; /* Place it at the top of the .calculator-container */
+  border-radius: 5px;
+  padding: 5px;
+  z-index: 10;
+}
+
+.theme-selector-container select {
+  border: none;
+  background-color: transparent;
+}
+
+.theme-default {
+  background-color: #fff; /* Changing the background color of entire page */
+  color: #000;
+}
+
+.theme-default .calculator {
+  background-color: #fff; /* Very dark grey for calculator background */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+}
+
+.theme-default button, .theme-default #result {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  background-color: #fff; /* Dark grey for buttons and result screen */
+  color: #000;
+}
+
+.theme-default .theme-selector-container {
+  background-color: #fff; /* Dark grey background for theme selector */
+  color: #010101; /* White text color */
+}
+
+.theme-default .theme-selector-container select {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  background-color: #fff; /* Dark grey background for select dropdown */
+  color: #010101; /* White text color */
+}
+
+.theme-dark {
+  background-color: #000; /* Changing the background color of entire page */
+  color: #fff;
+}
+
+.theme-dark .calculator {
+  background-color: #000;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.25);
+}
+
+.theme-dark button, .theme-dark #result {
+  background-color: #010101; /* Dark grey for buttons and result screen */
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.25);
+  color: #fff;
+}
+
+.theme-dark .theme-selector-container {
+  background-color: #010101; /* Dark grey background for theme selector */
+  color: #fff; /* White text color */
+}
+
+.theme-dark .theme-selector-container select {
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.35);
+  background-color: #010101; /* Dark grey background for select dropdown */
+  color: #fff; /* White text color */
+}
+
+
+.theme-dark button:hover {
+  background-color: #222;
+}
+
+.theme-light {
+  background-color: #eee; /* Changing the background color of entire page */
+  color: #000;
+}
+
+.theme-light .calculator {
+  background-color: #eee; /* Very dark grey for calculator background */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.theme-light button, .theme-light #result {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  background-color: #eee; /* Dark grey for buttons and result screen */
+  color: #000;
+}
+
+.theme-light .theme-selector-container {
+  background-color: #eee; /* Dark grey background for theme selector */
+  color: #010101; /* White text color */
+}
+
+.theme-light button:hover {
+  background-color: #ddd;
+}
+
+
+.theme-light .theme-selector-container select {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: #eee; /* Dark grey background for select dropdown */
+  color: #010101; /* White text color */
+}
+
 .calculator {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #eee;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   font-size: 2em;
-  width: 50%;
+  width: 100%;
   max-width: 500px;
   padding: 20px;
 }
@@ -22,10 +132,8 @@ body {
   font-size: 1.5em;
   text-align: right;
   padding: 10px;
-  background-color: #fff;
   border: none;
   border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
   width: 100%;
 }
@@ -40,14 +148,12 @@ button {
   font-size: 1em;
   padding: 10px;
   margin: 10px;
-  background-color: #fff;
   border: none;
   border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   width: 23%;
 }
 
 button:hover {
-  background-color: #ddd;
+  background-color: #eee;
 }
